--- a/classification_exercises.ipynb
+++ b/classification_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "336b3bdd",
+   "id": "a69726f3",
    "metadata": {},
    "source": [
     "# $ Classification Exercises $"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23580a71",
+   "id": "69879cc3",
    "metadata": {},
    "source": [
     "### imports"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cabd68c2",
+   "id": "c909e829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0754c1fc",
+   "id": "99fd1c81",
    "metadata": {},
    "source": [
     "# 4.  Create a pandas dataframe, df_iris, from this data."
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "32b51a3c",
+   "id": "82ceb003",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "105924b2",
+   "id": "c4a773f9",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a7225cfb",
+   "id": "b820190a",
    "metadata": {
     "scrolled": true
    },
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "69c42f21",
+   "id": "a881d3dd",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "84a85eec",
+   "id": "3eb26e8a",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4e7c992",
+   "id": "ae51ce5e",
    "metadata": {},
    "source": [
     "### Would you recommend rescaling the data based on these statistics?\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf76bfa",
+   "id": "495667c6",
    "metadata": {},
    "source": [
     "# 5. Read the data from this google sheet into a dataframe, df_google."
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "8c713e6f",
+   "id": "631b5fc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "0dcfeccc",
+   "id": "3edb90ef",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5813d76d",
+   "id": "cc1fa0c2",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3fc7aede",
+   "id": "4970afd5",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "1a29df0e",
+   "id": "be094cae",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "fc316fc4",
+   "id": "5c15abe7",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "95a04b4a",
+   "id": "a5510106",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "781a8202",
+   "id": "f2a9a0b6",
    "metadata": {},
    "source": [
     "# 6. Download the previous exercise's file into an excel (File → Download → Microsoft Excel). Read the downloaded file into a dataframe named df_excel."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "eeafe956",
+   "id": "63522ee2",
    "metadata": {
     "scrolled": false
    },
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c03b9353",
+   "id": "5c3ebfde",
    "metadata": {
     "scrolled": true
    },
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "feb9a6f5",
+   "id": "03c30ef4",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "52a301e1",
+   "id": "a015ae08",
    "metadata": {},
    "outputs": [
     {
@@ -785,67 +785,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "f9782517",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'mix'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [104]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf_excel_sample\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mselect_dtypes\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfloat64\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmix\u001b[49m()\n",
-      "File \u001b[0;32m/opt/homebrew/anaconda3/lib/python3.9/site-packages/pandas/core/generic.py:5575\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5568\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   5569\u001b[0m     name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_internal_names_set\n\u001b[1;32m   5570\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_metadata\n\u001b[1;32m   5571\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessors\n\u001b[1;32m   5572\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_info_axis\u001b[38;5;241m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5573\u001b[0m ):\n\u001b[1;32m   5574\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[name]\n\u001b[0;32m-> 5575\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getattribute__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'mix'"
-     ]
-    }
-   ],
-   "source": [
-    "df_excel_sample.select_dtypes('float64').mi()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "id": "6ff86af6",
+   "execution_count": 108,
+   "id": "f1053d2d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PassengerId    100.0\n",
-       "Survived         1.0\n",
-       "Pclass           3.0\n",
-       "Age             71.0\n",
-       "SibSp            5.0\n",
-       "Parch            5.0\n",
-       "Fare           263.0\n",
+       "PassengerId     99.000\n",
+       "Survived         1.000\n",
+       "Pclass           2.000\n",
+       "Age             70.170\n",
+       "SibSp            5.000\n",
+       "Parch            5.000\n",
+       "Fare           255.775\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_excel_sample.select_dtypes('float64').max()"
+    "# compute the range of numeric variables in data frame\n",
+    "df_excel_sample.select_dtypes('float64').max()-df_excel_sample.select_dtypes('float64').min()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aea78f10",
+   "id": "392106cb",
    "metadata": {},
-   "source": [
-    "Read the Table1_CustDetails table from the Excel_Exercises.xlsx file into a dataframe named df_excel.\n",
-    "assign the first 100 rows to a new dataframe, df_excel_sample\n",
-    "print the number of rows of your original dataframe\n",
-    "print the first 5 column names\n",
-    "print the column names that have a data type of object\n",
-    "compute the range for each of the numeric variables."
-   ]
+   "source": []
   }
  ],
  "metadata": {
