--- a/tidy_data.ipynb
+++ b/tidy_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6a48bd23",
+   "id": "88da228f",
    "metadata": {},
    "source": [
     "# $ Tidy Data $"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b245321",
+   "id": "2b8b2444",
    "metadata": {},
    "source": [
     "#### Imports"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cc32f169",
+   "id": "fb09ea46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf4b0d55",
+   "id": "f21b9a99",
    "metadata": {},
    "source": [
     "### 1. Attendance Data\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "79e36749",
+   "id": "05fcb72d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f77b552b",
+   "id": "8ad7a29f",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "69e1cdd6",
+   "id": "0cd0ec4a",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bbf3cb07",
+   "id": "48740176",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2878a11e",
+   "id": "0ac9148a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "46798384",
+   "id": "eb18b9b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8c85ce34",
+   "id": "25fa1c8c",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45786944",
+   "id": "7ab4222d",
    "metadata": {},
    "source": [
     "### 2. Coffee Levels"
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e7a23f0",
+   "id": "1f069810",
    "metadata": {},
    "source": [
     "### a) Read the coffee_levels table."
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cbf18cec",
+   "id": "8ab0d610",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "65c2ff8f",
+   "id": "678e9bf7",
    "metadata": {
     "scrolled": false
    },
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b510721",
+   "id": "9af753df",
    "metadata": {},
    "source": [
     "### b) Transform the data so that each carafe is in it's own column."
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8fd9911f",
+   "id": "e5b513d5",
    "metadata": {
     "scrolled": true
    },
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e3a7182",
+   "id": "32c80d7c",
    "metadata": {},
    "source": [
     "### c) Is this the best shape for the data?"
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0d1baee",
+   "id": "4c529356",
    "metadata": {},
    "source": [
     "The shape above is a better shape for the table because coffee_carafe is best seen as a column."
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f120253c",
+   "id": "3e7998df",
    "metadata": {},
    "source": [
     "### 3. Cake Recipes"
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e24ddf2e",
+   "id": "282f48f5",
    "metadata": {},
    "source": [
     "### a) Read the cake_recipes table. This data set contains cake tastiness scores for combinations of different recipes, oven rack positions, and oven temperatures."
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0b88b90f",
+   "id": "92fb1d2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ef4a95a8",
+   "id": "8a6c18df",
    "metadata": {
     "scrolled": true
    },
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d29f80d1",
+   "id": "95b1bc95",
    "metadata": {},
    "source": [
     "### b) Tidy the data as necessary."
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8fabb227",
+   "id": "151d82b8",
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7da6ee82",
+   "id": "ee242a6b",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4a4aab5a",
+   "id": "e8bad31f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e7e078c6",
+   "id": "a33ac71c",
    "metadata": {
     "scrolled": true
    },
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85be6f48",
+   "id": "828844a0",
    "metadata": {},
    "source": [
     "### c) Which recipe, on average, is the best? \n",
@@ -1719,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4e1d9438",
+   "id": "2cacd019",
    "metadata": {
     "scrolled": true
    },
@@ -1794,7 +1794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aea9914d",
+   "id": "d08db360",
    "metadata": {},
    "source": [
     "### d) Which oven temperature, on average, produces the best results? \n",
@@ -1804,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2027f8ef",
+   "id": "45161222",
    "metadata": {
     "scrolled": true
    },
@@ -1878,17 +1878,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6861d94e",
+   "id": "6acd886d",
    "metadata": {},
    "source": [
     "### e) Which combination of recipe, rack position, and temperature gives the best result?\n",
-    "Recipe B in "
+    "Recipe B in bottom position at 300 degrees has the highest rating at 99.248541"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "cac62456",
+   "id": "6fe5080e",
    "metadata": {},
    "outputs": [
     {
