update split in test data to 20%

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -1779,7 +1779,7 @@
    "id": "ce30b3f4",
    "metadata": {},
    "source": [
-    "Tree_2 Model performed slightly better by 3%.\n"
+    "Tree_2 Model performed slightly better by 4%.\n"
    ]
   },
   {
@@ -1792,9 +1792,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 133,
    "id": "f9160581",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1802,12 +1804,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.87      0.84      0.86        81\n",
-      "           1       0.72      0.77      0.75        44\n",
+      "           0       0.83      0.96      0.89       133\n",
+      "           1       0.92      0.68      0.78        81\n",
       "\n",
-      "    accuracy                           0.82       125\n",
-      "   macro avg       0.80      0.81      0.80       125\n",
-      "weighted avg       0.82      0.82      0.82       125\n",
+      "    accuracy                           0.86       214\n",
+      "   macro avg       0.87      0.82      0.84       214\n",
+      "weighted avg       0.86      0.86      0.85       214\n",
       "\n"
      ]
     }
@@ -1821,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 134,
    "id": "2db64988",
    "metadata": {
     "scrolled": true
@@ -1833,12 +1835,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.85      0.78      0.81        81\n",
-      "           1       0.65      0.75      0.69        44\n",
+      "           0       0.83      0.86      0.85       133\n",
+      "           1       0.76      0.72      0.74        81\n",
       "\n",
-      "    accuracy                           0.77       125\n",
-      "   macro avg       0.75      0.76      0.75       125\n",
-      "weighted avg       0.78      0.77      0.77       125\n",
+      "    accuracy                           0.81       214\n",
+      "   macro avg       0.80      0.79      0.79       214\n",
+      "weighted avg       0.81      0.81      0.81       214\n",
       "\n"
      ]
     }
@@ -1868,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 135,
    "id": "8eb30772",
    "metadata": {
     "scrolled": true
@@ -1880,12 +1882,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.91      0.87       170\n",
-      "           1       0.81      0.69      0.75        98\n",
+      "           0       0.86      0.94      0.90       114\n",
+      "           1       0.87      0.74      0.80        65\n",
       "\n",
-      "    accuracy                           0.83       268\n",
-      "   macro avg       0.82      0.80      0.81       268\n",
-      "weighted avg       0.83      0.83      0.83       268\n",
+      "    accuracy                           0.87       179\n",
+      "   macro avg       0.87      0.84      0.85       179\n",
+      "weighted avg       0.87      0.87      0.86       179\n",
       "\n"
      ]
     }
@@ -1902,7 +1904,7 @@
    "id": "055e4b74",
    "metadata": {},
    "source": [
-    "### Tree_1 Model had an 83% accuracy in test data"
+    "### Tree_1 Model had an 87% accuracy in test data"
    ]
   },
   {
@@ -2995,7 +2997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "548620b5",
+   "id": "48dfd6f3",
    "metadata": {},
    "source": [
     "### 4. Compute: Accuracy, true positive rate, false positive rate, true negative rate, false negative rate, precision, recall, f1-score, and support."
@@ -3003,7 +3005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ff83e5",
+   "id": "236e638b",
    "metadata": {},
    "source": [
     "Create a confusion matrix\n",
@@ -3042,7 +3044,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "b340556c",
+   "id": "cb6a7f43",
    "metadata": {
     "scrolled": false
    },
@@ -3066,7 +3068,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e26e7177",
+   "id": "dc91b431",
    "metadata": {},
    "outputs": [
     {
@@ -3091,7 +3093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b0c5cdd",
+   "id": "585f050a",
    "metadata": {},
    "source": [
     "### churn_Yes (1) is the positive case"
@@ -3100,7 +3102,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "e4f9ed26",
+   "id": "3a24832a",
    "metadata": {},
    "outputs": [
     {
@@ -3127,7 +3129,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "b073a953",
+   "id": "d615b4fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3156,7 +3158,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "e2e1471a",
+   "id": "deeda97f",
    "metadata": {
     "scrolled": true
    },
@@ -3199,7 +3201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "debc271d",
+   "id": "bee229ed",
    "metadata": {},
    "source": [
     "### 5. Run through steps 2-4 using a different max_depth value."
@@ -3208,7 +3210,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "b30f864b",
+   "id": "61f16844",
    "metadata": {},
    "outputs": [
     {
@@ -3393,7 +3395,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "434339a3",
+   "id": "94b9a104",
    "metadata": {},
    "outputs": [
     {
@@ -3662,7 +3664,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "7f7a6c04",
+   "id": "bc44e999",
    "metadata": {
     "scrolled": false
    },
@@ -3698,7 +3700,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "745cffbd",
+   "id": "174be165",
    "metadata": {},
    "outputs": [
     {
@@ -3967,7 +3969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51bd29d1",
+   "id": "2a3bb834",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3975,7 +3977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac06de18",
+   "id": "05d7b9a0",
    "metadata": {},
    "outputs": [],
    "source": [
