--- a/Model.ipynb
+++ b/Model.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "id": "89e0287a",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay"
+    "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
@@ -3986,7 +3987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "801753ed",
    "metadata": {
     "scrolled": false
@@ -4240,7 +4241,7 @@
        "[891 rows x 13 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4521,7 +4522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "91db441b",
    "metadata": {},
    "outputs": [],
@@ -8760,9 +8761,453 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f74a4006",
+   "metadata": {},
+   "source": [
+    "# $KNN$\n",
+    "Use titanic data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "21c9a676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_validate_test_split(df, target, seed=123):\n",
+    "    '''\n",
+    "    This function takes in a dataframe, the name of the target variable\n",
+    "    (for stratification purposes), and an integer for a setting a seed\n",
+    "    and splits the data into train, validate and test. \n",
+    "    Test is 20% of the original dataset, validate is .30*.80= 24% of the \n",
+    "    original dataset, and train is .70*.80= 56% of the original dataset. \n",
+    "    The function returns, in this order, train, validate and test dataframes. \n",
+    "    '''\n",
+    "    train_validate, test = train_test_split(df, test_size=0.2, \n",
+    "                                            random_state=seed, \n",
+    "                                            stratify=df[target])\n",
+    "    train, validate = train_test_split(train_validate, test_size=0.3, \n",
+    "                                       random_state=seed,\n",
+    "                                       stratify=train_validate[target])\n",
+    "    return train, validate, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "502bc8f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# acqurire titanic data\n",
+    "titanic_df = acquire.get_titanic_data()\n",
+    "\n",
+    "\n",
+    "# prep titanic\n",
+    "titanic_prep = prepare.prep_titanic(titanic_df)\n",
+    "\n",
+    "# drop columns 'sex''class''embark_town'\n",
+    "titanic_prep = titanic_prep.drop(columns = {'sex', 'class','embark_town'})\n",
+    "\n",
+    "# split into train, validate, test\n",
+    "train, validate, test = train_validate_test_split(titanic_prep, target='survived', seed=123)\n",
+    "\n",
+    "# create X & y version of train, where y is a series with just the target variable and X are all the features. \n",
+    "\n",
+    "X_train = train.drop(columns=['survived'])\n",
+    "y_train = train.survived\n",
+    "\n",
+    "X_validate = validate.drop(columns=['survived'])\n",
+    "y_validate = validate.survived\n",
+    "\n",
+    "X_test = test.drop(columns=['survived'])\n",
+    "y_test = test.survived\n",
+    "\n",
+    "# take care of null values in age variable\n",
+    "X_train, X_validate, X_test = prepare.impute_mean_age(X_train, X_validate, X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7af8eb5d",
+   "metadata": {},
+   "source": [
+    "### 1. Fit a K-Nearest Neighbors classifier to your training sample and transform (i.e. make predictions on the training sample)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a450d521",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn1 = KNeighborsClassifier(n_neighbors=1, weights='uniform')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "340f633d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=1)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn1.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c994c106",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 1, 1, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = knn1.predict(X_train)\n",
+    "y_pred[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "adf6e67e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>583</th>\n",
+       "      <th>165</th>\n",
+       "      <th>50</th>\n",
+       "      <th>259</th>\n",
+       "      <th>306</th>\n",
+       "      <th>308</th>\n",
+       "      <th>314</th>\n",
+       "      <th>883</th>\n",
+       "      <th>459</th>\n",
+       "      <th>180</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>survived</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          583  165  50   259  306  308  314  883  459  180\n",
+       "survived    0    1    0    1    1    0    0    0    0    0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Actual data\n",
+    "pd.DataFrame(y_train[:10]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7c1fba04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# gives the probability of beign any given class\n",
+    "y_pred_proba = knn1.predict_proba(X_train)\n",
+    "y_pred_proba[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb335c0c",
+   "metadata": {},
+   "source": [
+    "### 2.. Evaluate your results using the model score, confusion matrix, and classification report."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "dd509361",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of KNN classifier on training set: 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model score\n",
+    "print('Accuracy of KNN classifier on training set: {:.2f}'\n",
+    "     .format(knn1.score(X_train, y_train)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d7b5eb7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[307   0]\n",
+      " [  2 189]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confusion matrix\n",
+    "print(confusion_matrix(y_train, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c5e1117c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>col_0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>survived</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>307</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>189</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "col_0       0    1\n",
+       "survived          \n",
+       "0         307    0\n",
+       "1           2  189"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 0= not surviv3d, 1= survived\n",
+    "pd.crosstab(y_train, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "204746c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      1.00      1.00       307\n",
+      "           1       1.00      0.99      0.99       191\n",
+      "\n",
+      "    accuracy                           1.00       498\n",
+      "   macro avg       1.00      0.99      1.00       498\n",
+      "weighted avg       1.00      1.00      1.00       498\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classification Report 0 = not survived, 1= survived\n",
+    "print(classification_report(y_train, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5576c0d9",
+   "metadata": {},
+   "source": [
+    "### 3. Print and clearly label the following: Accuracy, true positive rate, false positive rate, true negative rate, false negative rate, precision, recall, f1-score, and support.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca5a3d05",
+   "id": "d3cc68db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9759cf86",
+   "metadata": {},
+   "source": [
+    "### 4. Run through steps 2-4 setting k to 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2cd2bf4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "febb4a25",
+   "metadata": {},
+   "source": [
+    "### 5. Run through steps 2-4 setting k to 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8452c121",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5c729d0",
+   "metadata": {},
+   "source": [
+    "### 6. What are the differences in the evaluation metrics? Which performs better on your in-sample data? Why?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6f1af18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c946aa08",
+   "metadata": {},
+   "source": [
+    "### 7. Which model performs best on our out-of-sample data from validate?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbae1e07",
    "metadata": {},
    "outputs": [],
    "source": []
